  now considered invalid, with existing patterns being automatically removed
  from `autoconfig.yml`.
- Certain `autoconfig.yml` with an invalid structure could lead to crashes,
  which are now fixed.
- Clicking the inspector switched from existing modes (such as passthrough) to
  normal mode since v1.13.0. Now insert mode is only entered when the inspector
  is clicked in normal mode.

v1.13.1 (unreleased)
--------------------

Fixed
~~~~~

- With Qt 5.14, shared workers are now disabled. This works around a crash in
  QtWebEngine on certain sites (like the Epic Games Store or the Unreal Engine
  page).

v1.13.0 (2020-06-26)
--------------------

Deprecated
~~~~~~~~~~

- The `:inspector` command is deprecated and has been replaced by a new
  `:devtools` command (see below).

Removed
~~~~~~~

- The `:debug-log-level` command was removed as it's replaced by the new
  `logging.level.console` setting.
- The `qute://plainlog` special page got replaced by `qute://log?plain` - the
  names of those pages is considered an implementation detail, and
  `:messages --plain` should be used instead.

Changed
~~~~~~~

- Changes to commands:
  * `:config-write-py` now adds a note about `config.py` files being targeted at
    advanced users.
  * `:report` now takes two optional arguments for bug/contact information, so
    that it can be used without the report window popping up.
  * `:message` now takes a `--logfilter` / `-f` argument, which is a list of
    logging categories to show.
  * `:debug-log-filter` now understands the full logfilter syntax.
- Changes to settings:
  * `fonts.tabs` has been split into `fonts.tabs.{selected,unselected}` (see
    below).
  * `statusbar.hide` has been renamed to `statusbar.show` with the possible
    values being `always` (`hide = False`), `never` (`hide = True`) or
    `in-mode` (new, only show statusbar outside of normal mode.
  * The `QtFont` config type formerly used for `fonts.tabs` and