@@ -144,6 +144,7 @@ def init(*, args: argparse.Namespace) -> None:
     quitter.instance.shutting_down.connect(QApplication.closeAllWindows)
 
     _init_icon()
+    _init_pulseaudio()
 
     loader.init()
     loader.load_components()
@@ -186,6 +187,12 @@ def _init_icon():
         log.init.warning("Failed to load icon")
     else:
         q_app.setWindowIcon(icon)
+
+
+def _init_pulseaudio():
+    """Set properties for PulseAudio."""
+    for prop in ['application.name', 'application.icon_name']:
+        os.environ['PULSE_PROP_OVERRIDE_' + prop] = 'qutebrowser'
 
 
 def _process_args(args):
